--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -68,7 +68,7 @@ niveriacrates:
           <separator> <ncolor:primary>ᴄʟɪᴄᴋ</ncolor> <ncolor:secondary>ᴛᴏ ɢᴏ ᴛᴏ ᴛʜᴇ ɴᴇxᴛ ᴘᴀɢᴇ</ncolor>
 
     edit_crate:
-      title: "<ncolor:primary><bold>ᴍᴇɴᴜ</bold> | ᴇᴅɪᴛ ᴄʀᴀᴛᴇ: <ncolor:secondary>%s</ncolor></ncolor>"
+      title: "<ncolor:primary><bold>ᴍᴇɴᴜ</bold> | ᴇᴅɪᴛ ᴄʀᴀᴛᴇ: <ncolor:secondary><niveriacrates_crate_id></ncolor></ncolor>"
 
       rename:
         name: "<ncolor:primary>Rename Crate</ncolor>"
@@ -95,8 +95,8 @@ niveriacrates:
           <separator> <red><key:key.drop/></red> <ncolor:error>ᴛᴏ ᴘᴇʀᴍᴀɴᴇɴᴛʟʏ ᴅᴇʟᴇᴛᴇ ᴛʜɪѕ ᴄʀᴀᴛᴇ</ncolor>
 
   reload:
-    done: "<prefix:crates/> <separator> <ncolor:success>NiveriaCrates has been reloaded. (%s ms)</ncolor>"
+    done: "<prefix:crates/> <separator> <ncolor:success>NiveriaCrates has been reloaded. (<niveriacrates_time_ms> ms)</ncolor>"
 
   new_update: |-
-    <prefix:crates/> <separator> <ncolor:default>There is a new version of <ncolor:primary>NiveriaCrates</ncolor>: <ncolor:error>%s</ncolor> → <ncolor:success>%s</ncolor></ncolor>
+    <prefix:crates/> <separator> <ncolor:default>There is a new version of <ncolor:primary>NiveriaCrates</ncolor>: <ncolor:error><niveriacrates_current_version></ncolor> → <ncolor:success><niveriacrates_latest_version></ncolor></ncolor>
     <ncolor:default>Download link: <ncolor:secondary><click:open_url:"https://modrinth.com/plugin/niveriacrates">https://modrinth.com/plugin/niveriacrates</click></ncolor></ncolor>
